[gd_scene load_steps=3 format=3 uid="uid://tu4uvlgsm67r"]

[ext_resource type="Script" path="res://scripts/pauseMenu.gd" id="1_o102w"]
[ext_resource type="FontFile" uid="uid://bc61wi8n6vb0i" path="res://assests/fonts/PixelOperator8.ttf" id="2_25ujx"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o102w")

[node name="Level_Select" type="Node2D" parent="."]
z_index = 20
position = Vector2(0, -15)
scale = Vector2(0.75, 0.75)

[node name="Title" type="Node2D" parent="Level_Select"]
position = Vector2(0, -43)

[node name="Brackground" type="Polygon2D" parent="Level_Select/Title"]
position = Vector2(-66.4399, -28.0582)
scale = Vector2(8.69501, 2.05819)
color = Color(0, 0, 0, 0.607843)
polygon = PackedVector2Array(-7, 2, -6.04028, 1, 21, 1, 22, 2, 23, 3, 23, 21.6676, 22, 23, 21, 24, -6, 24, -7, 23, -8, 22, -8, 3)

[node name="Text" type="Label" parent="Level_Select/Title"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.5
offset_top = -39.0
offset_right = 130.5
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_25ujx")
theme_override_font_sizes/font_size = 24
text = "Game Paused
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level_Grouping" type="Node2D" parent="Level_Select"]
position = Vector2(0, 21)

[node name="Level_One_Button" type="Button" parent="Level_Select/Level_Grouping"]
offset_left = -126.0
offset_top = -22.0
offset_right = -91.0
offset_bottom = 11.0
scale = Vector2(1.5, 1.5)
theme_override_fonts/font = ExtResource("2_25ujx")
theme_override_font_sizes/font_size = 16

[node name="Label" type="Label" parent="Level_Select/Level_Grouping/Level_One_Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -17.5
offset_top = -12.0
offset_right = 17.5
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_25ujx")
theme_override_font_sizes/font_size = 24
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level_Two_Button" type="Button" parent="Level_Select/Level_Grouping"]
offset_left = -26.0
offset_top = -22.0
offset_right = 9.0
offset_bottom = 11.0
scale = Vector2(1.5, 1.5)
theme_override_fonts/font = ExtResource("2_25ujx")
theme_override_font_sizes/font_size = 16

[node name="Label" type="Label" parent="Level_Select/Level_Grouping/Level_Two_Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -17.5
offset_top = -12.0
offset_right = 17.5
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_25ujx")
theme_override_font_sizes/font_size = 24
text = "2
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level_Three_Button" type="Button" parent="Level_Select/Level_Grouping"]
offset_left = 74.0
offset_top = -22.0
offset_right = 109.0
offset_bottom = 11.0
scale = Vector2(1.5, 1.5)
theme_override_fonts/font = ExtResource("2_25ujx")
theme_override_font_sizes/font_size = 16

[node name="Label" type="Label" parent="Level_Select/Level_Grouping/Level_Three_Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -17.5
offset_top = -12.0
offset_right = 17.5
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_25ujx")
theme_override_font_sizes/font_size = 24
text = "3
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Main_Menu_Button" type="Button" parent="Level_Select"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = 63.0
offset_right = 98.0
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_25ujx")
theme_override_font_sizes/font_size = 16

[node name="Label" type="Label" parent="Level_Select/Main_Menu_Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -11.5
offset_right = 31.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_25ujx")
theme_override_font_sizes/font_size = 24
text = "Main Menu
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Level_Select/Level_Grouping/Level_One_Button" to="." method="_on_level_one_button_pressed"]
[connection signal="pressed" from="Level_Select/Level_Grouping/Level_Two_Button" to="." method="_on_level_two_button_pressed"]
[connection signal="pressed" from="Level_Select/Level_Grouping/Level_Three_Button" to="." method="_on_level_three_button_pressed"]
[connection signal="pressed" from="Level_Select/Main_Menu_Button" to="." method="_on_main_menu_button_pressed"]
